k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-4-frontend
  labels:
    app: group-4-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group-4-frontend
  template:
    metadata:
      labels:
        app: group-4-frontend
    spec:
      containers:
      - name: react-app
        image: quay.io/cayops/group-4-frontend:880b86ad44e753fed883c5d244d96b70cd0b6568
        ports:
        - containerPort: 3000
